[package]
name = "ipfee"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
clap = "2.33.1"
crossbeam = "=0.8.4"
lru = "0.12.3"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = "1.0.199"
serde_json = "1.0.116"
solana-sdk = { path = "/path/to/your/jito-solana/sdk" }
